--- a/index.html
+++ b/index.html
@@ -23,11 +23,47 @@
 
     <link rel="stylesheet" href="./styles.css"/>
 
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+
+    <link href='https://fonts.googleapis.com/css?family=Crimson Pro' rel='stylesheet'>
+
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
+
     <title>Interior Consultant</title>
   </head>
   <body>
+    <header>
+      <div class="logo">
+        this interior
+      </div>
+      <div>
+        icon
+      </div>
+    </header>
+
     <div>
-      Interior Consultant 
+      <div class="text-content">
+        <h1>Modern interior</h1>
+
+        <p>
+          A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.
+        </p>
+
+        <div class="read-more">
+          <span>Read More</span>
+          <div>
+            icon
+          </div>
+        </div>
+      </div>
+
+      <div>
+        imagen
+      </div>
     </div>
+
+    <footer>
+      created by edeldev - devChallenges.io
+    </footer>
   </body>
 </html>
