informacion e imagenes de autor

--- a/index.html
+++ b/index.html
@@ -58,7 +58,26 @@
       </div>
 
       <div>
-        imagen
+        <img class="interior-photo" src="./photo1.png" alt="This is a photo of the interior design">
+
+        <div class="card">
+          <div class="header-card">
+            <img class="author-photo" src="./photo2.png" alt="Photo of the author of the design"/>
+
+            <div>
+              <div class="author-name">
+                Aliza Webber
+              </div>
+
+              <div class="job">
+                Interior designer
+              </div>
+            </div>
+          </div>
+          <div class="footer-card">
+            Designed in 2020 by Aliza Webber
+          </div>
+        </div>
       </div>
     </div>
 
