uso de iconos de material

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>Interior Consultant</title>
   </head>
   <body>
@@ -36,9 +38,7 @@
       <div class="logo">
         this interior
       </div>
-      <div>
-        icon
-      </div>
+      <span class="material-icons md-36">menu</span>
     </header>
 
     <div>
@@ -51,13 +51,13 @@
 
         <div class="read-more">
           <span>Read More</span>
-          <div>
-            icon
-          </div>
+          <span class="material-icons md-24">
+            trending_flat
+          </span>
         </div>
       </div>
 
-      <div>
+      <div class="mid-content">
         <img class="interior-photo" src="./photo1.png" alt="This is a photo of the interior design">
 
         <div class="card">
