media querie para desktop

--- a/index.html
+++ b/index.html
@@ -41,41 +41,43 @@
       <span class="material-icons md-36">menu</span>
     </header>
 
-    <div>
-      <div class="text-content">
-        <h1>Modern interior</h1>
-
-        <p>
-          A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.
-        </p>
-
-        <div class="read-more">
-          <span>Read More</span>
-          <span class="material-icons md-24">
-            trending_flat
-          </span>
+    <div class="wrap">
+      <div class="content">
+        <div class="text-content">
+          <h1>Modern interior</h1>
+  
+          <p>
+            A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.
+          </p>
+  
+          <div class="read-more">
+            <span>Read More</span>
+            <span class="material-icons md-24">
+              trending_flat
+            </span>
+          </div>
         </div>
-      </div>
-
-      <div class="mid-content">
-        <img class="interior-photo" src="./photo1.png" alt="This is a photo of the interior design">
-
-        <div class="card">
-          <div class="header-card">
-            <img class="author-photo" src="./photo2.png" alt="Photo of the author of the design"/>
-
-            <div>
-              <div class="author-name">
-                Aliza Webber
-              </div>
-
-              <div class="job">
-                Interior designer
+  
+        <div class="mid-content">
+          <img class="interior-photo" src="./photo1.png" alt="This is a photo of the interior design">
+  
+          <div class="card">
+            <div class="header-card">
+              <img class="author-photo" src="./photo2.png" alt="Photo of the author of the design"/>
+  
+              <div>
+                <div class="author-name">
+                  Aliza Webber
+                </div>
+  
+                <div class="job">
+                  Interior designer
+                </div>
               </div>
             </div>
-          </div>
-          <div class="footer-card">
-            Designed in 2020 by Aliza Webber
+            <div class="footer-card">
+              Designed in 2020 by Aliza Webber
+            </div>
           </div>
         </div>
       </div>
