cambio en menu de header desktop

--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
       <div class="logo">
         this interior
       </div>
+
+      <ul>
+        <li class="select-view">
+          Home
+        </li>
+
+        <li>
+          Collection
+        </li>
+
+        <li>
+          About
+        </li>
+
+        <li>
+          Contact
+        </li>
+      </ul>
       <span class="material-icons md-36">menu</span>
     </header>
 
